# P.O.S.C

./: CMakeLists.txt  README.md  ccPoscDlg.cpp  ccPoscDlg.h  eigen.cpp  eigen.h  functions.cpp  functions.h  poscDlg.ui  qDummyPlugin.cpp  qPOSC.cpp  qPOSC.h  qPOSC.qrc
